<resources>
    <string name="app_name">Fake 17</string>

    <!--Auth-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="have_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="field_required">This field is required.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="invalid_password">* Secure passwords must contain an upper case letter, a number, an special symbol and must be at least 8 characters long.</string>
    <string name="password_not_equal">Passwords must be equal.</string>
    <string name="signup_thanks">Thanks for signing up!</string>
    <string name="welcome">Welcome!</string>
    <!--Auth-->

    <!--Cats-->
    <string name="temperament">Temperament</string>
    <string name="temperament_description">This cat is known for being: %1$s</string>
    <string name="weight">%1$s KG</string>
    <string name="cat_child_friendly">This cat is child friendly</string>
    <string name="cat_dog_friendly">This cat is dog friendly</string>
    <string name="cat_hypoallergenic">This cat is hypoallergenic</string>
    <string name="search">Search</string>
    <string name="search_by_country">Search by country</string>
    <!--Cats-->

    <!--Drawer-->
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="reviews">Reviews</string>
    <string name="payments">Payments</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <!--Drawer-->
</resources>