<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/catsFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/requestFragment"
        android:icon="@drawable/ic_requests"
        android:title="@string/requests" />
    <item
        android:id="@+id/reviewsFragment"
        android:icon="@drawable/ic_reviews"
        android:title="@string/reviews" />
    <item
        android:id="@+id/paymentsFragment"
        android:icon="@drawable/ic_payments"
        android:title="@string/payments" />

    <group android:id="@+id/grp1">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>
</menu>