<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.home.cat.CatDetailFragment">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/name"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            tools:text="@tools:sample/full_names" />

        <LinearLayout
            android:id="@+id/friendliness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/child_friendly"
                style="@style/Theme.Fake17.IconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:text="@string/cat_child_friendly"
                app:drawableStartCompat="@drawable/ic_child" />

            <TextView
                android:id="@+id/dog_friendly"
                style="@style/Theme.Fake17.IconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:text="@string/cat_dog_friendly"
                app:drawableStartCompat="@drawable/ic_dog" />

            <TextView
                android:id="@+id/hypoallergenic"
                style="@style/Theme.Fake17.IconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:text="@string/cat_hypoallergenic"
                app:drawableStartCompat="@drawable/ic_hypoallergenic" />

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            tools:text="@tools:sample/lorem/random" />
    </LinearLayout>
</ScrollView>